--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 appnope==0.1.0
+APScheduler==3.6.3
 backcall==0.2.0
 certifi==2020.6.20
 chardet==3.0.4
@@ -28,6 +29,7 @@ rq==1.5.1
 six==1.15.0
 traitlets==5.0.4
 twilio==6.45.1
+tzlocal==2.1
 urllib3==1.25.10
 wcwidth==0.2.5
 Werkzeug==1.0.1
